应用关系图

--- a/hamster-admin/src/main/resources/static/src/framework/sidebar/index.scss
+++ b/hamster-admin/src/main/resources/static/src/framework/sidebar/index.scss
@@ -75,7 +75,8 @@
 }
 
 .yt-admin-framework-sidebar .ant-menu-item{
-    transition: .3s;
+    transition: all .3s;
+    border-right: none;
 }
 
 .yt-admin-framework-sidebar .ant-menu-item-selected {
