循环依赖图

--- a/hamster-admin/src/main/resources/static/src/framework/header/index.scss
+++ b/hamster-admin/src/main/resources/static/src/framework/header/index.scss
@@ -19,6 +19,9 @@
     width: 200px;
     transition: all .3s;
     overflow: hidden;
+    text-align: center;
+    color: #fff;
+    line-height: 50px;
     .brand-logo{
         height: 30px;
         margin-top: 10px;
